--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.11.4"
   }
 }
